--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,24 @@
-{
-  "extends": "../../tsconfig.json",
+ {
   "compilerOptions": {
+    "module": "commonjs",
+    "declaration": true,
+    "noImplicitAny": true,
+    "removeComments": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true,
+    "esModuleInterop": true,
+    "target": "es2016",
+    "sourceMap": true,
+    "lib": [
+      "es6"
+    ],
     "outDir": "./dist"
   },
   "include": [
     "./src"
+  ],
+  "exclude": [
+    "node_modules",
+    "**/*.spec.ts"
   ]
  }
