--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@quantos/mongo-helper",
-  "version": "1.0.1",
+  "version": "1.0.2",
   "description": "Quantos mongo helper for node",
   "author": "fabriziotognetto <info@quantos.it>",
   "main": "dist/index.js",
+  "repository": "github:quantosapplications/mongo-helper",
   "scripts": {
     "build": "tsc"
   },
