--- a/package.json
+++ b/package.json
@@ -4,15 +4,15 @@
   "description": "Quantos mongo helper for node",
   "author": "fabriziotognetto <info@quantos.it>",
   "main": "dist/index.js",
-  "repository": "github:quantosapplications/mongo-helper",
+  "repository": "github:ftognetto/mongo-helper",
   "scripts": {
     "build": "tsc"
   },
   "dependencies": {
-    "mongodb": "^3.6.4"
+    "mongodb": "^4.7.0"
   },
   "devDependencies": {
-    "@types/mongodb": "^3.6.8",
+    "@types/mongodb": "^4.0.7",
     "@types/node": "^14.14.7",
     "ts-loader": "^5.3.3",
     "tslint": "^6.1.3",
